Add styles characterDetails

--- a/src/stylesheets/layout/_searchbar.scss
+++ b/src/stylesheets/layout/_searchbar.scss
@@ -7,6 +7,6 @@
     .Searchbar-input {
         margin: 10%;
         border: solid 2px rgb(44, 206, 192);
-        background-color: black;
+        background-color: rgb(44, 206, 192);
     }
 }
