--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,7 +1,16 @@
+* {
+    text-decoration: none;
+}
+body {
+    font-size: 16px;
+    font-family: 'Play', sans-serif;
+    background-color: rgb(58, 57, 57);
+    color: yellow;
+}
 @import 'base/reset';
+@import 'layout/main';
 @import 'layout/header';
 @import 'layout/searchbar';
 @import 'layout/characterlist';
 @import 'layout/charactercard';
 @import 'layout/characterdetails';
-@import 'layout/main';
