--- a/src/stylesheets/layout/_characterlist.scss
+++ b/src/stylesheets/layout/_characterlist.scss
@@ -15,7 +15,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            color: yellow;
+            color: $mainColor;
             .Card-text {
                 display: flex;
                 flex-direction: column;
