--- a/src/stylesheets/layout/_characterdetails.scss
+++ b/src/stylesheets/layout/_characterdetails.scss
@@ -1,8 +1,8 @@
 .CharacterDetails-ctn {
-    color: yellow;
+    color: $mainColor;
     .Details-link {
         margin: 37px;
-        color: yellow;
+        color: $mainColor;
     }
     .Details-ctn {
         display: flex;
@@ -10,10 +10,25 @@
         justify-content: center;
         align-items: center;
         margin: 10px;
-        .Details-text {
-            font-weight: 700;
-            text-transform: uppercase;
+        @include forTablet {
+            margin: 85px;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
         }
-        
+        .Details-text-ctn {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            @include forTablet {
+                justify-content: center;
+                align-items: flex-start;
+            }
+            .Details-text {
+                font-weight: 700;
+                text-transform: uppercase;
+            }
+        }
     }
 }
